--- a/index.html
+++ b/index.html
@@ -11,14 +11,54 @@
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/175711/bas.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/175711/OrbitControls-2.js"></script>
   </head>
-  <body>
-    <div id="three-container"></div>
-    <div id="three-container"></div>
-    <div id="three-container"></div>
+  <body class="body">
+    <section class="section-three">
+      <div id="instructions">
+        Generations of computer
+      </div>
+      <div class="row">
+        <div class="col-1-of-3">
+          <div class="heading__container">
+            <table border="0">
+              <tr>
+                <td class="gen">1st Generation &rarr;</td>
+                <td width="200px">
+                  <span class="heading-secondary">Vaccum tubes</span>
+                </td>
+              </tr>
+              <tr>
+                <td class="gen">2nd Generation &rarr;</td>
 
-    <div id="instructions">
-      click and drag to control the animation
-    </div>
+                <td width="200px">
+                  <span class="heading-secondary"> Transistors</span>
+                </td>
+              </tr>
+              <tr>
+                <td class="gen">3rd Generation &rarr;</td>
+                <td width="200px">
+                  <span class="heading-secondary"> Integrated Circuits</span>
+                </td>
+              </tr>
+              <tr>
+                <td class="gen">4th Generation &rarr;</td>
+                <td width="200px">
+                  <span class="heading-secondary"> Micro processors</span>
+                </td>
+              </tr>
+              <tr>
+                <td class="gen">5th Generation &rarr;</td>
+                <td width="200px">
+                  <span class="heading-secondary"> Artifical Intelligence</span>
+                </td>
+              </tr>
+            </table>
+          </div>
+        </div>
+        <div class="col-2-of-3">
+          <div id="three-container"></div>
+        </div>
+      </div>
+    </section>
 
     <script src="./index.js"></script>
   </body>
